# SofaWinDependencies

./: CMakeLists.txt
lib/win32/: freeglut.lib  freeglutd.lib  libpng.lib  zlib.lib
lib/win64/: freeglut.lib  freeglutd.lib  libpng.lib  zlib.lib
